Fixed: README gives git clone to pyml directory
(Reported by Sébastien Hinderer.)

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ actively maintained.
 
 *Documentation:* http://pyml.gforge.inria.fr/doc
 
-*Git:* ``git clone http://pyml.gforge.inria.fr/git``
+*Git:* ``git clone http://pyml.gforge.inria.fr/git pyml``
 
 *Git Repository Browser:* http://pyml.gforge.inria.fr/browser
 
