--- a/README
+++ b/README
@@ -9,7 +9,7 @@ actively maintained.
 
 *Documentation:* http://pyml.gforge.inria.fr/doc
 
-*Git:* ``git clone http://pyml.gforge.inria.fr/git pyml``
+*Git:* ``git clone http://pyml.gforge.inria.fr/pyml.git``
 
 *Git Repository Browser:* http://pyml.gforge.inria.fr/browser
 
