--- a/README
+++ b/README
@@ -30,14 +30,14 @@ transparently (``Py.String.of_string`` and ``Py.String.to_string``).
 
 Bindings are split in three modules:
 
-- ``Pywrappers`` provides low-level bindings, which follow closely the
-  conventions of the C bindings for Python. Submodules
-  ``Pywrappers.Python2`` and ``Pywrappers.Python3`` contain version-specific
-  bindings.
-
 - ``Py`` provides the initialization functions and some high-level
   bindings, with error handling and naming conventions closer to OCaml
   usages.
 
-- ``Pycaml_compat`` provides a signature close to the old ``Pycaml``
+- ``Pycaml`` provides a signature close to the old ``Pycaml``
   module, so as to ease migration.
+
+- ``Pywrappers`` provides low-level bindings, which follow closely the
+  conventions of the C bindings for Python. Submodules
+  ``Pywrappers.Python2`` and ``Pywrappers.Python3`` contain version-specific
+  bindings.
