--- a/README
+++ b/README
@@ -50,3 +50,5 @@ or
 #install_printer Py.Object.format
 (the former will print valid Python values, the latter will pretty-print
 values without quoting).
+
+If you have utop and ocamlfind, you can make pymlutop.
