Document the dependency to Stdcompat

--- a/README
+++ b/README
@@ -19,8 +19,11 @@ OPAM: opam install pyml
 
 The Python library is linked at runtime and the same executable can be
 run in a Python 2 or a Python 3 environment. py.ml does not
-require any Python library at compile time, nor any other
-dependency.
+require any Python library at compile time.
+The only compile time dependency is Stdcompat to ensure compatibility
+with all OCaml compiler versions from 3.12:
+https://github.com/thierry-martinez/stdcompat/
+
 
 Bindings are split in three modules:
 
